error.txt
file:///E:/College/forensiclab/server.js:5
import loginHandler from './api/login.js';
       ^^^^^^^^^^^^
SyntaxError: The requested module './api/login.js' does not provide an export named 'default'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:654:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v25.2.1
